--- a/src/app/shared/components/lc-input/lc-input.component.html
+++ b/src/app/shared/components/lc-input/lc-input.component.html
@@ -1,6 +1,12 @@
 <div class="lc-input-wrapper field--{{ fieldSize }}" [formGroup]="parentFormGroup">
   <span *ngIf="label" class="lc-input-label">{{ label }}</span>
-  <input class="lc-input-field" [value]="content" [formControlName]="formControlName" (change)="contentChangeEvent()" type="{{password && !viewPassword ? 'password' : 'text'}}"/>
+  <input class="lc-input-field"
+         [value]="content"
+         [formControlName]="formControlName"
+         (change)="contentChangeEvent()"
+         type="{{password && !viewPassword ? 'password' : 'text'}}"
+         [readonly]="readonly"
+  />
   <span *ngIf="showHint && hintLabel" class="lc-input-hint">
     {{hintLabel}}
   </span>
