Implemented order creation integration jonander-upm/web-laiacano#45

--- a/src/app/shared/dialogs/login-dialog/login-dialog.component.html
+++ b/src/app/shared/dialogs/login-dialog/login-dialog.component.html
@@ -24,6 +24,9 @@
           Did you forget your password?
         </a>
       </div>
+      <div class="py-2">
+        <span>Are you a newcomer? <a class="font-bold" (click)="register()">Register here!</a></span>
+      </div>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
