--- a/src/app/shared/components/lc-cart-summary-card/lc-cart-summary-card.component.html
+++ b/src/app/shared/components/lc-cart-summary-card/lc-cart-summary-card.component.html
@@ -8,7 +8,8 @@
       <div class="flex flex-col gap-1">
         <div class="flex items-center gap-5">
           <span class="text-2xl font-bold">{{ product.title }}</span>
-          <mat-icon class="h-fit w-fit text-3xl cursor-pointer invisible group-hover:visible transition-visibility"
+          <mat-icon *ngIf="!readonly"
+                    class="h-fit w-fit text-3xl cursor-pointer invisible group-hover:visible transition-visibility"
                     (click)="itemRemoved.emit(amount)"
           >
             delete_outline
@@ -16,11 +17,13 @@
         </div>
         <span class="text-lg">{{ product.format }}</span>
       </div>
-      <lc-amount-selector [amount]="amount"
+      <lc-amount-selector *ngIf="!readonly"
+                          [amount]="amount"
                           [maxAmount]="product.stock"
                           (itemRemoved)="itemRemoved.emit($event)"
                           (itemAdded)="itemAdded.emit($event)"
       ></lc-amount-selector>
+      <span *ngIf="readonly" class="text-lg">Amount: {{ amount }}</span>
     </div>
     <div class="flex justify-between items-baseline">
       <span class="text-base leading-none align-baseline">Price: {{ product.price ?? '-'}}</span>
