--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,7 +4,7 @@
     *ngIf="pageData"
     [title]="pageData.title"
     [id]="id"
-    [hasFilters]="pageData.hasFilters"
+    [filters]="pageData.filters"
     (toggleFilterEvent)="toggleFilters($event)"
   ></lc-subheader>
   <div
